--- a/www/Backbone/style.styl
+++ b/www/Backbone/style.styl
@@ -22,6 +22,8 @@
     padding 0
     margin 15px
   ul
+    &.hidden
+      display none
     ul
       margin 1px initial
     li
@@ -45,8 +47,7 @@
         border-radius 5px
         &:focus
           outline none
-          -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1),
-          0 0 8px rgba(255, 255, 255, 1);
+          -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(255, 255, 255, 1);
         //
       .focusedby
         //display inline-block
