--- a/www/Backbone/style.styl
+++ b/www/Backbone/style.styl
@@ -1,9 +1,10 @@
-//@import normalize
+@import normalize
+html
+  background-color #EEE
 .tali-top
   /*\
    *  Background of the whole app
   \*/
-  background-color #EEE
   width 100%
   height 100%
   position absolute
@@ -12,12 +13,12 @@
     position fixed
     right 0
     .notification
+      // TODO Make these boxes variable in width
       padding 1px
       background-color #FFF
       border 2px solid #BBB
       border-radius 4px
       margin 2px
-      // Make these boxes variable in width
   & > ul
     padding 0
     margin 15px
@@ -29,22 +30,50 @@
     li
       margin 3px initial
       list-style-type none
+      // Simplyfy this below
+      &.expanded > .handle.plus
+      &.collapsed > .handle.minus
+        display none
+      &.expanded > .handle.minus
+      &.collapsed > .handle.plus
+        display initial
+      &.no-children
+        & > .handle
+          &.plus, &.minus
+            display none
+          &.dot
+            display initial
       .handle
-        font-family monospace
-        font-size 200%
-        opacity: 0.2
-        text-shadow: 0 0 8px rgba(0,0,0,1);
-        margin-right 3px
-        &:not(.dot)
-          display none // temporal
+        // Tweak so that - is as wide as +
+        font-family "Courier New", x-monospace
+        // Tweak so that it's inline with .headline's middle.
+        line-height 1.2em
+        font-size 150%
+        // More visibility
+        font-weight 500
+        // de-emphasis
+        opacity: 0.33
+        // Little bit of magic
+        text-shadow: 0 0 3px rgba(0,0,0,1);
+        // Give a little space to breath
+        margin-right 5px
+        &.plus, &.minus
+          cursor pointer
+          //display none // temporal
         &.plus
           //
         &.minus
           //
         &.dot
-          //padding 6px
-          //
+          //font-size 175%
+          //opacity 0.20
+          display none
+          cursor default
+          // Tweak because &middot; is somewhat off to the right
+          margin-left -3px
+          margin-right (-@margin-left)+5
       .headline
+        -webkit-user-select initial
         border none
         width 600px
         height 1.7em
@@ -54,7 +83,7 @@
         border-radius 5px
         &:focus
           outline none
-          -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(255, 255, 255, 1);
+          -webkit-box-shadow: inset 0 1px 5px rgba(0,0,0,.15), 0 0 8px #FFF;
         //
       .focusedby
         //display inline-block
@@ -69,3 +98,5 @@
           background #DDD
         &.theirs > .headline
           //background pink
+  *
+    -webkit-user-select none
